[Fix] Form (Tool version left aligned) - heading and icons on mobile

--- a/_assets/sass/_parts-sections/_parts-form.tool/tool-fieldset.sass
+++ b/_assets/sass/_parts-sections/_parts-form.tool/tool-fieldset.sass
@@ -126,7 +126,7 @@
 			text-transform: none
 			pointer-events: none
 			+max(520)
-				line-height: 1.1
+				// line-height: 1.1
 				max-width: 90%
 				+center
 
